@@ -8,7 +8,6 @@ inc/Module/Install/Metadata.pm
 inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
 lib/CGI/Header.pm
-lib/CGI/Header/Redirect.pm
 Makefile.PL
 MANIFEST			This list of files
 META.yml
