@@ -7,7 +7,6 @@ repository 'https://github.com/anazawa/p5-CGI-Header';
 requires 'Carp'       => '1.10';
 requires 'CGI::Util'  => '1.5';
 requires 'List::Util' => '1.19';
-requires 'overload';
 requires 'Scalar::Util';
 
 test_requires 'Test::Exception' => '0.31';
