@@ -1,7 +1,6 @@
 use strict;
-use Test::More tests => 2;
+use Test::More tests => 1;
 
 BEGIN {
     use_ok 'CGI::Header';
-    use_ok 'CGI::Header::Redirect';
 }
